overflow fix

--- a/Lab 2/Facebook/css/style.css
+++ b/Lab 2/Facebook/css/style.css
@@ -1,5 +1,5 @@
 body{
-
+    overflow-x: hidden;
 }
 #first-block{
     background-color: #f0f2f5;
